Fixed site styles on mobile

--- a/Campaign/resources/assets/sass/app.scss
+++ b/Campaign/resources/assets/sass/app.scss
@@ -19,3 +19,55 @@ $typeahead-line-height: 1.5em;
 @import "banner";
 @import "template";
 @import "farbtastic";
+
+.navbar-default {
+    border-radius: 0px;
+}
+
+.navbar-brand {
+    @media (max-width: 799px) {
+        position: absolute;
+        right: 0px;
+        top: 8px;
+        z-index: 12;
+    }
+}
+
+.navbar-nav .dropdown {
+    z-index: 11;
+    margin-top: 4px;
+    margin-left: 2px;
+}
+
+.remp-menu .svg-logo {
+    @media (max-width: 799px) {
+        width: 100px;
+    }
+}
+
+.display-on-computer{
+    @media (max-width: 799px) {
+        display: none;
+    }
+}
+  
+.display-on-phone {
+    @media (min-width: 799px) {
+        display: none;
+    
+    }
+}
+
+@media (max-width: 1199px) {
+    #header {
+        padding-top: 0px;
+    }
+
+    #s-main-menu {
+        padding-top: 20px;
+    }
+
+    #s-main-menu form {
+        padding-bottom: 16px;
+    }
+}
